tests/paczka1/fuzzy1/46742916.err
Error in line 20: YcCj3 S422 64,98
Error in line 22: Cov4Vr0 A717 37,2
Error in line 27: YcCj3 S422 169,8
Error in line 32: YcCj3 S731 79,7
Error in line 37: P5uRhZbK S731 24,0
